feat: Add new methods for internal user creation
Still missing

 * Calendar token management
 * Laundry invite management
 * Mark user seen?
